Bug 255808 - Cannot delete an event/task/contact (delete action is greyed out)
Summary: Cannot delete an event/task/contact (delete action is greyed out)
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR critical
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-01 13:59 UTC by Ludwig Reiter
Modified: 2011-01-19 11:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-11-01 13:59:04 UTC
Version:           unspecified (using Devel) 
OS:                Linux

snapshot version: 4:4.6~20101101.1191729-1maemo1.1191281


Reproducible: Always

Steps to Reproduce:
1. Create an new event/task/contact.
2. Select the item.
3. Try to activate Actions->Edit->Delete item...


Actual Results:  
Delete event/... is greyed out and cannot be selected.

Expected Results:  
Should be black and selectable and trigger the deletion of the item from the Kolab resource.
Comment 1 Volker Krause 2010-11-01 15:09:39 UTC
SVN commit 1191941 by vkrause:

Make the action selection model follow the navigation selection model.
Fixes various single item actions being disabled.

BUG: 255808


 M  +1 -0      calendar/korganizer-mobile.qml  
 M  +1 -0      contacts/kaddressbook-mobile.qml  
 M  +1 -0      notes/notes.qml  
 M  +1 -0      tasks/tasks.qml  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1191941
Comment 2 Ludwig Reiter 2010-11-12 11:41:09 UTC
version: 20101112.1195824-1maemo1

delete task: ok delete contact:ok
But delete event:  greyed out (failure)
And move or copy event are also greyed out.
Place: Event Viewer->Actions->Edit
So reopened
Comment 3 Sergio Martins 2010-11-15 08:13:38 UTC
Fixing it.
Comment 4 Sergio Martins 2010-11-15 09:13:31 UTC
SVN commit 1197244 by smartins:

Tell the item action selection model that we selected an incidence in the view.

Fixes "Cannot delete an event/task/contact (delete action is greyed out)"

BUG: 255808

 M  +1 -0      mainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1197244