Tell the item action selection model that we selected an incidence in the view.

Fixes "Cannot delete an event/task/contact (delete action is greyed out)"

BUG: 255808

svn path=/trunk/KDE/kdepim/mobile/; revision=1197244